fix align

--- a/app/assets/stylesheets/sitewide/passwords.css.scss
+++ b/app/assets/stylesheets/sitewide/passwords.css.scss
@@ -6,6 +6,7 @@ div.payloadContainer {
   border: 1px solid #bbb;
   width: 500px;
   line-height: 15px;
+  height: 20px;
   border-radius: 2px;
   padding: 10px;
   display: inline-block;
@@ -19,7 +20,7 @@ input.password {
   font-size: 1.5em;
 }
 img.visibleButton {
-  height: 15px;
+  height: 20px;
   vertical-align: middle;
 }
 
